# semantic_types_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
benchmarks/: CMakeLists.txt  GenericTypeReadWrite.cpp  bench_CerealEigen.cpp  bench_CerealSemantic.cpp
src/: CMakeLists.txt  TestUtils.h
src/generic_type/: GenericType.cpp  GenericType.h
src/semantic_cereal/: CerealWriteable.cpp  CerealWriteable.h  CerealWriter.cpp  CerealWriter.h
src/semantic_type/: SemanticType.cpp  SemanticType.h  Spatial.h
src/specific/: CerealEigen.h  CerealSemantic.h
tests/: CMakeLists.txt  gtest_utils.cpp  gtest_utils.h  test_CerealEigen.cpp  test_CerealSemantic.cpp
